name:              survey-server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.CRUD
                     Utils
                     Language.ModuleDSL
                     Language.ModuleDSL.Syntax
                     Language.ModuleDSL.Pretty
                     Language.ModuleDSL.Parser
                     Language.ModuleDSL.Render
                     Language.ModuleDSL.Arbitrary

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , aeson                         >= 0.6.1.0    && < 0.7
                 , blaze-markup                  >= 0.5.1.5    && < 0.6
                 , bytestring                    >= 0.9        && < 0.11
                 , conduit                       >= 1.0
                 , data-default                  >= 0.5.3      && < 0.6
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 0.3
                 , hamlet                        >= 1.1        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 1.9        && < 1.10
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-sqlite             >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , pretty                        >= 1.1.1.0    && < 1.2
                 , QuickCheck                    >= 2.6        && < 2.7
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , template-haskell              >= 2.8        && < 2.9
                 , text                          >= 0.11       && < 0.12
                 , time                          >= 1.4.0.1    && < 1.5
                 , transformers                  >= 0.3        && < 0.4
                 , unordered-containers          >= 0.2.3.1    && < 0.3
                 , uu-parsinglib                 >= 2.8.1      && < 2.9
                 , wai-extra                     >= 1.3        && < 1.4
                 , warp                          >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9

executable         survey-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , survey-server
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , survey-server
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
