name:              survey-server
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Layouts
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Utils
                     Angular.UIRouter
                     Angular.BasicRouter
                     Handler.Admin
                     Handler.Home
                     Handler.Modules
                     Handler.Survey
                     Language.ModuleDSL
                     Language.ModuleDSL.Syntax
                     Language.ModuleDSL.Pretty
                     Language.ModuleDSL.Parser
                     Language.ModuleDSL.Render
                     Language.ModuleDSL.Arbitrary

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2        && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-json                    >= 1.2        && < 1.3
                 , aeson                         >= 0.6.1.0    && < 0.7
                 , blaze-html                    >= 0.6.1.1    && < 0.7
                 , blaze-markup                  >= 0.5.1.5    && < 0.6
                 , bytestring                    >= 0.9        && < 0.11
                 , conduit                       >= 1.0
                 , containers                    >= 0.5        && < 0.6
                 , cookie                        >= 0.4.0.1    && < 0.5
                 , data-default                  >= 0.5.3      && < 0.6
                 , directory                     >= 1.1        && < 1.3
                 , fast-logger                   >= 0.3
                 , filepath                      >= 1.3.0.1    && < 1.4
                 , hamlet                        >= 1.1        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , http-conduit                  >= 1.9        && < 1.10
                 , mime-mail                     >= 0.4.2.1    && < 0.5
                 , mime-mail-ses                 >= 0.2.1.3    && < 0.3
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , MonadRandom                   >= 0.1.11     && < 0.2
                 , old-locale                    >= 1.0.0.5    && < 1.1
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-postgresql         >= 1.2.1      && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , pretty                        >= 1.1.1.0    && < 1.2
                 , pureMD5                       >= 2.1.2.1    && < 2.2
                 , pwstore-fast                  >= 2.3        && < 2.4
                 , QuickCheck                    >= 2.6        && < 2.7
                 , random                        >= 1.0.1.1    && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , template-haskell              >= 2.8        && < 2.9
                 , text                          >= 0.11       && < 0.12
                 , time                          >= 1.4.0.1    && < 1.5
                 , transformers                  >= 0.3        && < 0.4
                 , unordered-containers          >= 0.2.3.1    && < 0.3
                 , uu-parsinglib                 >= 2.8.1      && < 2.9
                 , wai-extra                     >= 1.3        && < 1.4
                 , warp                          >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9

executable         survey-server
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , survey-server
                     , yesod

    ghc-options:       -threaded -O2

-- test-suite test
--     type:              exitcode-stdio-1.0
--     main-is:           main.hs
--     hs-source-dirs:    tests
--     ghc-options:       -Wall

--     build-depends: base
--                  , survey-server
--                  , yesod-test >= 1.2 && < 1.3
--                  , yesod-core
--                  , yesod
--                  , persistent
--                  , persistent-postgresql
--                  , resourcet
--                  , monad-logger
--                  , transformers
--                  , hspec

Test-Suite dsl-tests
    type:              exitcode-stdio-1.0
    hs-source-dirs:    tests
    main-is:           dsl-tests.hs
    ghc-options:       -Wall
    build-depends: survey-server,
                   base                        >= 4.3      && < 5,
                   containers                  >= 0.4      && < 0.6,
                   tasty                       >= 0.3,
                   tasty-quickcheck            >= 0.3,
                   QuickCheck                  >= 2.6      && < 2.7
